# code-playground

BOOST.Asio/: main.cpp
Cpp/Basics/: CMakeLists.txt  main.cpp
Cpp/C++98/multimap/: main.cpp
Cpp/Classes/: main.cpp
Cpp/filesystems/: main.cpp
Cpp/map/: main.cpp
Cpp/orgByExtension/: .project  main  main.cpp
Cpp/untitled/: CMakeLists.txt
JS/sqlWriting/: package-lock.json  package.json  script.js
ListConnectCPPto-QML/: CMakeLists.txt  DListModel.cpp  DListModel.h  Main.qml  main.cpp
QMLgui/lanNetworking/: CMakeLists.txt  Main.qml  main.cpp
QMLgui/lanNetworking/Backend/: backend.cpp  backend.h
Qt/Networking/FTP_Sharing/: CMakeLists.txt  Main.qml  main.cpp
Qt/Networking/FTP_Sharing/Backend/: backend.cpp  backend.h
Qt/Networking/TCP_Sharing/: CMakeLists.txt
Qt/Networking/UDP_Sharing/: CMakeLists.txt  Main.qml
Qt/Networking/UDP_Sharing/src/: main.cpp
Qt/Networking/UDP_Sharing/src/UDP_Networking/: contact.cpp  contact.h
Rec_onListItem/: CMakeLists.txt  Main.qml  main.cpp
WindowTesting2T/: CMakeLists.txt  Main.qml  backend.cpp  backend.h  main.cpp
boostAsio/: CMakeLists.txt  main.cpp
experimenting_qml-design/: CMakeLists.txt  Main.qml  main.cpp
glass/: CMakeLists.txt  Main.qml  main.cpp
lists_vector/: CMakeLists.txt  Main.qml  backend.cpp  backend.h  main.cpp
lists_vector/manage/: list_care.cpp
windowTestings/btnSecondWin/btnSecondWin/: CMakeLists.txt  backend.cpp  backend.h  main.cpp
windowTestings/btnSecondWin/btnSecondWin/guis/gui_2/: gui_2.qml
windowTestings/btnSecondWin/btnSecondWin/guis/main/: Main.qml
